Trying to fix build error from og project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=demo
+twelvedata.api.key=0f08a351f6864c919ebe6429c5d17194
+twelvedata.api.url.info=https://api.twelvedata.com/quote
+twelvedata.api.url.history=https://api.twelvedata.com/time_series
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/stock_game
+spring.datasource.username=postgres
+spring.datasource.password=RattleTheStars1!
